fixed issue with resizing browser and everything shifting around

--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -406,10 +406,8 @@ div.message h2 {
 
 /* styling for navigation bar */
 div#navBar {
-	position: fixed;
-	margin-left:-520px;
-	left: 50%;
-	top: 0;
+	margin-left:auto;
+	margin-right:auto;
 	height: 26px;
 	width: 980px;
 	padding-left: 30px;
@@ -418,7 +416,8 @@ div#navBar {
 	background-color: black;
 	background-image: none;
 	z-index: 1;
-
+	position:relative;
+	margin-left:-144px;
 }
 
 #nav-print-to-pdf form { display:none; }
@@ -750,22 +749,37 @@ div#bio-bytes-table .sequence {
 /****** groups ***********/
 #container {
 	width: 750px;
- 	margin-right: auto;
-  	margin-left: auto;
-	margin-top: 4em;
-/*  	position: relative;*/
+	background-image: url(../images/background.png);
+	background-repeat: repeat-y;
+	background-position: center top;
+	margin-top:0;
+	margin-left:auto;
+	margin-right:auto;
+	padding-top:0;
+	padding-left:201px;
+	padding-right:201px;
+	/*
+	text-align:left;
+	*/
 }
 
 body {
 	margin-top: 0;
+/* may need this part
+	text-align:center;
+	width:100%;
+*/
+
+
+/*	background-image: url(../images/background.png);
+	background-repeat: repeat-y;
+	background-position: center;
+*/
+	background-color:#efefef;
+
 }
 
 body, p, ol, ul, td {
-	background-image: url(../images/background.png);
-	background-repeat: repeat-y;
-	background-position: center;
-/*background-color: #f7f4ee;*/
-	background-color:#efefef;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size:   13px;
   line-height: 18px;
